--- a/html/_eigen/HTML/broodjes/style.css
+++ b/html/_eigen/HTML/broodjes/style.css
@@ -30,17 +30,27 @@ header {
     display: grid;
     grid-column: 1/3;
     background: burlywood;
+    border-top-right-radius: 15px;
     padding: 30px;
     grid-template-columns: 300px 1fr;
+    border-bottom:1px solid rgb(143, 143, 143);
 }
 
 .logo { 
-    display: inline-block;
+    display: flex;
+    align-items: center;
     grid-column: 1/2;
 }
 
 .logo > h1 {
+    display: inline-block;
     margin:0;
+}
+
+.logo > img {
+    display: inline-block;
+    width: 50px; height: 50px;
+    margin-right:15px;
 }
 
 nav {
@@ -87,6 +97,8 @@ main > section {
 }
 
 .placeholder{
+    display: flex;
+    align-items: center;
     min-height: 250px;
 }
 
@@ -108,12 +120,21 @@ main > section {
 }
 
 .form {
+    display: block;
     width: 400px;
     margin: 0 auto;
     text-align: center;
 }
 
+select {
+    border:0;
+    padding:10px 20px;
+    margin-bottom: 10px;
+}
 
+input[type="radio"] {
+    margin-bottom: 10px;
+}
 
 .bestel {
     border:0;
@@ -166,12 +187,16 @@ aside img {
 
 footer {
     background: burlywood;
+    border-bottom-left-radius: 15px;
+    border-top:1px solid rgb(143, 143, 143);
     grid-column: 1/3;
     padding: 15px;
 }
 
 .footer-nav {
-    text-align: right;
+    width: 200px;
+    border: 1px solid red;
+    float: right;
 }
 
 .footer-nav a {
@@ -191,6 +216,7 @@ footer p {
 
 .heart:hover {
     animation: pulsing-heart .6s linear infinite;
+    cursor: default;
 }
 
 
