--- a/html/_eigen/HTML/broodjes/style.css
+++ b/html/_eigen/HTML/broodjes/style.css
@@ -3,37 +3,46 @@
 a {text-decoration: none;}
 a:link {
     text-decoration: none;
-    color: black;
+    color: #6a6c6e;
 }
-a:visited{color: black;}
-a:hover{color: black;}
-a:active{color: black;}
+a:visited{color: #6a6c6e;}
+a:hover{color: #6a6c6e;}
+a:active{color: #6a6c6e;}
 
 .active {
-    background: #f1f1f1;
+    background: #f9f9f9;
 }
 
 body {
-    background: cornsilk;
+    background: #f9f9f9;
+    color: #282828;
     font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Rozha One', serif;  
+}
+
+p {
     font-size: 14px;
 }
 
+
 #wrapper {
     max-width: 1024px;
-    margin: 0 auto;
+    margin: 60px auto;
     display: grid;
     grid-template-columns: 800px 224px;
+    box-shadow: 0 0 40px 40px #f3f3f3;
 }
 
 header {
     display: grid;
     grid-column: 1/3;
-    background: burlywood;
-    border-top-right-radius: 15px;
-    padding: 30px;
+    background: white;
+    font-family: 'Rozha One', serif;
+    padding: 50px 30px;
     grid-template-columns: 300px 1fr;
-    border-bottom:1px solid rgb(143, 143, 143);
 }
 
 .logo { 
@@ -68,32 +77,32 @@ nav > ul {
 nav > ul > li {
     display: inline;
     background: white;
-    border-radius: 4px;
     padding:12px;
     margin-right: 10px;
+    border-bottom:2px solid #333;
 }
-
-nav > ul > li:hover {
-    background: salmon;
+nav > ul > li > a {
+    display: inline-block;
+    padding:12px;
 }
-
 main {
     max-width: 800px;
-    background: whitesmoke;
-    padding: 10px;
+    background: #f7f7f7;
+    padding: 10px 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
 main > section {
-    display: inline-block;
-    width: 380px;
-    min-height: 400px;
+    display: flex;
+    flex-flow: wrap;
+    width: 250px;
+    min-height: 380px;
 }
 
 .placeholder > img {
-    max-width: 300px;
+    max-width: 240px;
 }
 
 .placeholder{
@@ -102,10 +111,9 @@ main > section {
     min-height: 250px;
 }
 
-.prijs, .bestel {
+.prijs, .bestel, .betal {
     background: linear-gradient( lightsalmon, lightcoral);
     width: 100px;
-    align-items: flex-end;
     padding: 8px;
     border-radius: 4px;
     text-align: center;
@@ -114,26 +122,36 @@ main > section {
     cursor: pointer;
 }
 
+.betal {
+    margin-left:660px;
+}
+
+.prijs {
+    align-self: flex-end;
+}
+
 .prijs:hover {
     background: linear-gradient(lightcoral, lightsalmon);
 
 }
 
-.form {
-    display: block;
-    width: 400px;
-    margin: 0 auto;
+.fa-shopping-basket {
+    margin-left: 10px;
+}
+
+form {
     text-align: center;
+    margin-bottom: 20px;
 }
 
 select {
     border:0;
-    padding:10px 20px;
-    margin-bottom: 10px;
+    padding:10px 35px;
+    margin: 0 50px 10px 0 ;
 }
 
-input[type="radio"] {
-    margin-bottom: 10px;
+label {
+    margin-right: 60px;
 }
 
 .bestel {
@@ -147,13 +165,13 @@ table {
 
 tr {
     height: 25px;
-    background: lightsalmon;
+    background: #fff;
     border-top:1px solid #f1f1f1;
     border-bottom:1px solid #f1f1f1;
 }
 
 tr:nth-child(even){
-    background: burlywood;
+    background: #f7f7f7;
 }
 
 td {
@@ -162,7 +180,7 @@ td {
 
 aside {
     max-width: 224px;
-    background: ghostwhite;
+    background: #f7f7f7;
     padding: 14px;
 }
 
@@ -186,16 +204,19 @@ aside img {
 }
 
 footer {
-    background: burlywood;
-    border-bottom-left-radius: 15px;
-    border-top:1px solid rgb(143, 143, 143);
+    background: #f1f1f1;
     grid-column: 1/3;
-    padding: 15px;
+    padding: 30px 15px;
+}
+
+footer > p {
+    width: 600px;
+    float:left;
 }
 
 .footer-nav {
-    width: 200px;
-    border: 1px solid red;
+    width: 260px;
+    text-align: right;
     float: right;
 }
 
@@ -203,7 +224,9 @@ footer {
     margin-right: 10px;
 }
 
-
+.footer-nav a:hover {
+    color: #000;
+}
 
 footer p {
     margin:0;
